--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.0",
     "semantic-ui-css": "^2.2.12",
-    "semantic-ui-react": "^0.77.2"
+    "semantic-ui-react": "^0.77.2",
     "redux": "^3.7.2",
     "redux-form": "^7.2.1",
     "redux-form-material-ui": "^4.3.3",
