--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
     "lodash": "^4.17.4",
     "material-ui": "^0.19.4",
     "react": "^16.2.0",
+    "react-countdown-clock": "^2.1.0",
+    "react-deadline": "^1.0.1",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-redux-form": "^1.16.5",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.0",
-    "semantic-ui-css": "^2.2.12",
-    "semantic-ui-react": "^0.77.2"
     "redux": "^3.7.2",
     "redux-form": "^7.2.1",
     "redux-form-material-ui": "^4.3.3",
     "redux-thunk": "^2.2.0",
+    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-react": "^0.77.2",
     "superagent": "^3.8.2"
   },
   "scripts": {
